fix(access_rights): fix check access rights in catalog service